@@ -167,10 +167,15 @@ int env_overrides = 0;
 
 int ignore_errors_flag = 0;
 
-/* Nonzero means don't remake anything, just print the data base
-   that results from reading the makefile (-p).  */
+/* Nonzero means print the data base that results from reading the makefile.
+   (-p or --print-data-base).  */
 
 int print_data_base_flag = 0;
+
+/* Nonzero means don't remake anything, just print a list of targets defined
+   by reading the makefile (--print-targets).  */
+
+int print_targets_flag = 0;
 
 /* Nonzero means don't remake anything; just return a nonzero status
    if the specified targets are not up to date (-q).  */
@@ -509,6 +514,7 @@ static struct command_switch switches[] =
     { CHAR_MAX+11, string, &shuffle_mode, 1, 1, 0, 0, "random", 0, "shuffle", 0 },
     { CHAR_MAX+12, string, &jobserver_style, 1, 0, 0, 0, 0, 0, "jobserver-style", 0 },
     { WARN_OPT, strlist, &warn_flags, 1, 1, 0, 0, "warn", NULL, "warn", NULL },
+    { CHAR_MAX+14, flag, &print_targets_flag, 1, 1, 0, 0, 0, 0, "print-targets", 0 },
     { 0, 0, NULL, 0, 0, 0, 0, NULL, NULL, NULL, NULL }
   };
 
@@ -2287,6 +2293,14 @@ main (int argc, char **argv, char **envp)
           f->update_status = us_success;
           f->command_state = cs_finished;
         }
+    }
+
+  /* If the user wants to see a list of targets show it now then quit.
+     We do this before rebuilding makefiles to avoid extraneous output.  */
+  if (print_targets_flag)
+    {
+      print_targets ();
+      die (EXIT_SUCCESS);
     }
 
   if (!restarts && new_files != 0)
