@@ -51,11 +51,29 @@ run_make_test(q!
 
 unlink('foo.baz');
 
-# SV 40657: Test #4: "Suffix rules" with deps are normal rules
+# SV 40657: "Suffix rules" with deps are normal rules
 
 my $prewarn = 'warning: ignoring prerequisites on suffix rule definition';
 
 touch('foo.bar');
+
+# Verify warnings for single-suffix rules
+
+run_make_test(q!
+.SUFFIXES:
+.SUFFIXES: .baz
+
+.baz: foo.bar ; @echo make $@ from $<
+
+$X.POSIX:
+!,
+              'X=1 .baz', "#MAKEFILE#:5: $prewarn\nmake .baz from foo.bar\n");
+
+# In POSIX mode we don't get a warning
+
+run_make_test(undef, 'X= .baz', "make .baz from foo.bar\n");
+
+# Test double-suffix rules
 
 run_make_test(q!
 .SUFFIXES:
@@ -67,25 +85,25 @@ $X.POSIX:
 !,
               'X=1 .baz.biz', "#MAKEFILE#:7: $prewarn\nmake .baz.biz from foo.bar\n");
 
-# SV 40657: Test #5: In POSIX mode we don't get a warning
+# SV 40657: In POSIX mode we don't get a warning
 
 run_make_test(undef, 'X= .baz.biz', "make .baz.biz from foo.bar\n");
 
 unlink('foo.bar');
 
-# SV 40657: Test #6: In POSIX mode, no pattern rules should be created
+# SV 40657: In POSIX mode, no pattern rules should be created
 
 utouch(-20, 'foo.baz');
 
 run_make_test(undef,
               'X= foo.biz', "#MAKE#: *** No rule to make target 'foo.biz'.  Stop.\n", 512);
 
-# SV 40657: Test #7: In Non-POSIX mode, a pattern rule is created
+# SV 40657: In Non-POSIX mode, a pattern rule is created
 
 run_make_test(undef,
               'X=1 foo.biz', "#MAKEFILE#:7: $prewarn\nmake foo.biz from foo.baz\n");
 
-# SV 40657: Test #8: ... but any prerequisites are ignored
+# SV 40657: ... but any prerequisites are ignored
 
 utouch(-10, 'foo.biz');
 touch('foo.bar');
