@@ -37,6 +37,10 @@ https://sv.gnu.org/bugs/index.php?group=make&report_id=111&fix_release_id=111&se
   things like "ifeq ((foo,bar),)" are now syntax errors.  Use a variable to
   hide the comma if needed: "COMMA = ," / "ifeq ((foo$(COMMA)bar),)".
 
+* NOTE: Deprecated behavior.
+  The check in GNU Make 4.3 for suffix rules with prerequisites didn't check
+  single-suffix rules, only double-suffix rules.  Add the missing check.
+
 * New feature: Unload function for loaded objects
   When a loaded object needs to be unloaded by GNU Make, it will invoke an
   unload function (if one is defined) beforehand that allows the object to
@@ -55,6 +59,11 @@ https://sv.gnu.org/bugs/index.php?group=make&report_id=111&fix_release_id=111&se
   In addition to --warn from the command line, which takes effect for make
   invoked recursively, warnings can be controlled only for the current
   instance of make using the .WARNINGS variable.
+
+* New feature: Printing targets defined by the makefile
+  A new option "--print-targets" will print all explicit, non-special targets
+  defined in the makefiles, one per line, then exit with success.  No recipes
+  are invoked and no makefiles are re-built.
 
 * 'make --print-data-base' (or 'make -p') now outputs time of day
   using the same form as for file timestamps, e.g., "2023-05-10
